# neorx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
init/: init.sql
modules/causalbiorl/: benchmark.py  models.py
modules/causalbiorl/causal/: __init__.py  graph_encoder.py  planner.py  reward_learner.py  scm.py  surrogate_docker.py
modules/causalbiorl/tests/: test_causal_agent.py  test_integration.py
modules/genmol/: api.py  train.py
modules/mirrorfold/: __init__.py  __main__.py  analysis.py  api.py  compare.py  mirror.py  models.py  predictor.py  therapeutic.py  viz.py
modules/mirrorfold/tests/: test_analysis.py  test_compare.py  test_mirror.py  test_predictor.py  test_therapeutic.py
modules/molscreen/data/: .gitignore
modules/neorx/: __init__.py  __main__.py  admet.py  api.py  cache.py  classifier.py  counterfactual.py  graph_builder.py  identifier.py  literature_validator.py  models.py  persistence.py  pipeline.py  report.py  scorer.py  tissue_filter.py  validator.py
modules/neorx/data_sources/: __init__.py  chembl.py  open_targets.py
neorx/: __init__.py
