[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causaltarget"
version = "0.1.0"
description = "Causal drug target discovery via Pearl's do-calculus — distinguishes genuine causal targets from correlational bystanders"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Kelyn Paul Njeri" },
]
keywords = [
    "causal-inference",
    "drug-discovery",
    "do-calculus",
    "knowledge-graph",
    "bioinformatics",
    "cheminformatics",
    "pearl",
    "target-identification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "biopython>=1.85",
    "chembl-webresource-client>=0.10.9",
    "dowhy>=0.14",
    "fastapi[standard]>=0.135.2",
    "matplotlib>=3.10",
    "meeko>=0.6",
    "gemmi>=0.7",
    "notebook>=7.5.5",
    "numpy>=2.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "py3Dmol>=2.4",
    "rdkit>=2025.9.6",
    "requests>=2.32",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67",
    "typer>=0.15",
    "scipy>=1.14",
    "seaborn>=0.13",
    "scikit-learn>=1.6",
    "pyyaml>=6.0",
    "gymnasium>=1.0",
    "networkx>=3.0",
    "causal-learn>=0.1.3.8",
    "stable-baselines3>=2.7.1",
    "jinja2>=3.1",
    "pyvis>=0.3",
    "rich>=13.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/NeoForge/CausalTarget"
Documentation = "https://github.com/NeoForge/CausalTarget#readme"
Repository = "https://github.com/NeoForge/CausalTarget"
Issues = "https://github.com/NeoForge/CausalTarget/issues"
Changelog = "https://github.com/NeoForge/CausalTarget/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docking = ["vina>=1.2"]
rl = ["stable-baselines3>=2.0"]
mirror = ["fair-esm>=2.0"]

[project.scripts]
dockbot = "modules.dockbot.__main__:main"
genmol = "modules.genmol.__main__:main"
causalbiorl = "modules.causalbiorl.__main__:main"
mirrorfold = "modules.mirrorfold.__main__:main"
causaltarget = "modules.causal_target.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["causaltarget", "modules"]

[tool.hatch.build.targets.sdist]
include = [
    "causaltarget/",
    "modules/",
    "main.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "init/",
    "docker-compose.yml",
    "Dockerfile",
    ".env.example",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
