[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neorx"
version = "0.1.0"
description = "Causal drug target discovery via Pearl's do-calculus — distinguishes genuine causal targets from correlational bystanders"
readme = "README.md"
license = "LicenseRef-NeoRx-NonCommercial"
requires-python = ">=3.13"
authors = [
    { name = "Kelyn Paul Njeri" },
]
keywords = [
    "causal-inference",
    "drug-discovery",
    "do-calculus",
    "knowledge-graph",
    "bioinformatics",
    "cheminformatics",
    "pearl",
    "target-identification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "biopython>=1.85",
    "chembl-webresource-client>=0.10.9",
    "dowhy>=0.14",
    "fastapi[standard]>=0.135.2",
    "matplotlib>=3.10",
    "meeko>=0.6",
    "gemmi>=0.7",
    "notebook>=7.5.5",
    "numpy>=2.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "py3Dmol>=2.4",
    "rdkit>=2025.9.6",
    "requests>=2.32",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67",
    "typer>=0.15",
    "scipy>=1.14",
    "seaborn>=0.13",
    "scikit-learn>=1.6",
    "pyyaml>=6.0",
    "gymnasium>=1.0",
    "networkx>=3.0",
    "causal-learn>=0.1.3.8",
    "stable-baselines3>=2.7.1",
    "jinja2>=3.1",
    "pyvis>=0.3",
    "rich>=13.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "chembl-downloader>=0.5.2",
]

[project.urls]
Homepage = "https://github.com/NeoForge/NeoRx"
Documentation = "https://github.com/NeoForge/NeoRx#readme"
Repository = "https://github.com/NeoForge/NeoRx"
Issues = "https://github.com/NeoForge/NeoRx/issues"
Changelog = "https://github.com/NeoForge/NeoRx/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docking = ["vina>=1.2"]
rl = ["stable-baselines3>=2.0"]
mirror = ["fair-esm>=2.0"]

[project.scripts]
dockbot = "modules.dockbot.__main__:main"
genmol = "modules.genmol.__main__:main"
causalbiorl = "modules.causalbiorl.__main__:main"
mirrorfold = "modules.mirrorfold.__main__:main"
neorx = "modules.neorx.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["neorx", "modules"]

[tool.hatch.build.targets.sdist]
include = [
    "neorx/",
    "modules/",
    "main.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "init/",
    "docker-compose.yml",
    "Dockerfile",
    ".env.example",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
testpaths = ["modules"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::UserWarning:chembl_webresource_client",
]

[tool.coverage.run]
source = ["modules"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/templates/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "B905", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["modules", "neorx"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
